* Fri Oct  2 2009 mbhangui@gmail.com
Release 1.6.2 Start 01/10/2009
1.   


* Fri Oct  2 2009 mbhangui@gmail.com
Release 1.6.1 Start 13/09/2009
13/09/2009
1.  Added option to ignore requirement of alias to be local
15/09/2009
2.  On error report the target address instead of alias
3.  Corrected logic for trying alternate MX.
16/09/2009
4.  Fixed compilation issue for tls.c, auth_admin.c adminCmmd.c,
    indisrvr.c when HAVE_SSL was undefined
17/09/2009
5.  Removed duplicate entry for ipchange in adminCommands in variables.c
6.  Fixed sql syntax error (while inserting in MySQL ) in mgmtpassfuncs.c
7.  Display error message from indisrvr to adminclient
19/09/2009
8.  Fix for mandriva 2009.1
9.  Added definitions for LT_INIT in configure scripts (nssd, flash, indimail,
    cdb, eps)
20/09/2009
10. Added new repository for latest bleeding edge IndiMail RPM
    http://download.opensuse.org/repositories/home:/indimail
11. Major chagnes to indimail.spec to support Mandriva 2009.1 on
    openSUSE build service (OBS)
12. Updated autoconf scripts for fortune-1.0.tar.gz libdkim-1.3.tar.gz
    flash-0.9.4.tar.gz nssd-1.0.tar.gz ripmime-1.4.0.9.tar.gz
    altermime-0.3.10.tar.gz
21/09/2009
13. Created git repository at
    git://indimail.git.sourceforge.net/gitroot/indimail/indimail
23. BUG - Fixed segmentation fault in dbinfo when mcdinfo was not present
24. InLookup to initiate reconnect to hostcntrl database if MySQL goes down
26/09/2009
25. mdir_t type change to int64 instead of uint64
26. Display current quota usage as 0 when maildirsize is absent
27. Check return status of recalc_quota()
28. Display for home directory as missing when absent in vuserinfo
27/09/2009
29. Set read permissions for mcdfile to prevent permission denied problem
    when dbinfo is run by non-indimail user
28/09/2009
30. New -C option to vadddoamin to allow selective RECIPIENT check for a
    domain
31. Added chkrcptdomains to list of control file from which domain should