@@ -28,11 +28,11 @@ man_MANS=vadduser.1 adminclient.1 chowkidar.8 clearopensmtp.8 dbinfo.1 hostcntrl
 	indisrvr.8 indiversion.8 InLookup.8 inlookup.8 inquerytest.1 ipchange.1 \
 	logmonitor.1 mgmtpass.1 postdel.8 printdir.1 proxyimap.8 proxypop3.8 resetquota.1 \
 	vacation.8 vaddaliasdomain.1 vadddomain.1 valias.1 vatrn.1 vbulletin.1 vcalias.1 \
-	vcaliasrev.sh.1 vcfilter.1 vchkpass.1 vdeldomain.1 vdelivermail.8 vdeloldusers.8 \
+	vcaliasrev.sh.1 vcfilter.1 vchkpass.8 vdeldomain.1 vdelivermail.8 vdeloldusers.8 \
 	vdeluser.1 vdominfo.1 vfilter.8 vfstab.1 vgroup.1 vhostid.1 vipmap.1 vmoddomain.1 \
 	vmoddomlimits.1 vmoduser.1 vmoveuser.1 vpasswd.1 vpriv.1 vproxy.8 vrenamedomain.1 \
 	vrenameuser.1 vreorg.8 vsetuserquota.1 vsmtp.1 vuserinfo.1 indimail.5 IndiMail.5 \
-	updaterules.8 osh.8 svctool.1 systpass.1
+	updaterules.8 osh.8 svctool.1 systpass.8
 
 setuid_list = ../sbin/systpass vdeldomain vadddomain vadduser vdeluser \
 			  vaddaliasdomain vrenamedomain vrenameuser vbulletin vdominfo \
