@@ -607,8 +607,8 @@ f 644 root indimail ${prefix}/man/man1/vbulletin.1.gz	BUILDROOT${prefix}/man/man
 f 644 root indimail ${prefix}/man/man1/vcalias.1.gz	BUILDROOT${prefix}/man/man1/vcalias.1.gz
 f 644 root indimail ${prefix}/man/man1/vcaliasrev.sh.1.gz	BUILDROOT${prefix}/man/man1/vcaliasrev.sh.1.gz
 f 644 root indimail ${prefix}/man/man1/vcfilter.1.gz	BUILDROOT${prefix}/man/man1/vcfilter.1.gz
-f 644 root indimail ${prefix}/man/man1/vchkpass.1.gz	BUILDROOT${prefix}/man/man1/vchkpass.1.gz
-f 644 root indimail ${prefix}/man/man1/systpass.1.gz	BUILDROOT${prefix}/man/man1/systpass.1.gz
+f 644 root indimail ${prefix}/man/man8/vchkpass.8.gz	BUILDROOT${prefix}/man/man8/vchkpass.8.gz
+f 644 root indimail ${prefix}/man/man8/systpass.8.gz	BUILDROOT${prefix}/man/man8/systpass.8.gz
 f 644 root indimail ${prefix}/man/man1/vdeldomain.1.gz	BUILDROOT${prefix}/man/man1/vdeldomain.1.gz
 f 644 root indimail ${prefix}/man/man1/vdeluser.1.gz	BUILDROOT${prefix}/man/man1/vdeluser.1.gz
 f 644 root indimail ${prefix}/man/man1/vdominfo.1.gz	BUILDROOT${prefix}/man/man1/vdominfo.1.gz
