@@ -1,0 +1,1 @@
+.so man8/vchkpass.8
